@@ -53,11 +53,12 @@ for name in __all__:
 
 # Release data
 from IPython import Release # do it explicitly so pydoc can see it - pydoc bug
-__author__  = '%s <%s>\n%s <%s>\n%s <%s>' % \
-              ( Release.authors['Fernando'] + Release.authors['Janko'] + \
-                Release.authors['Nathan'] )
-__license__ = Release.license
-__version__ = Release.version
+__author__   = '%s <%s>\n%s <%s>\n%s <%s>' % \
+               ( Release.authors['Fernando'] + Release.authors['Janko'] + \
+                 Release.authors['Nathan'] )
+__license__  = Release.license
+__version__  = Release.version
+__revision__ = Release.revision
 
 # Namespace cleanup
 del name,glob,loc
